[gd_scene load_steps=10 format=3 uid="uid://cyhky0flpfem8"]

[ext_resource type="Script" path="res://scenes/change_story.gd" id="1_0hp78"]
[ext_resource type="PackedScene" uid="uid://c4dnrwrwk2nah" path="res://ui/dialog_controller.tscn" id="2_mam1j"]
[ext_resource type="Texture2D" uid="uid://c5ahl6yb705jg" path="res://textures/kenney_game-icons/forward.png" id="3_0hq6g"]

[sub_resource type="Gradient" id="Gradient_gwe6v"]
interpolation_mode = 2
colors = PackedColorArray(0, 0.27451, 0, 1, 0, 0.0745098, 0.458824, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w8cca"]
gradient = SubResource("Gradient_gwe6v")
fill_to = Vector2(1, 1)

[sub_resource type="Animation" id="Animation_ih3d0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Selector/Yes:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Selector/Yes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(255, 180)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Selector/No:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Selector/No:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(358, 180)]
}

[sub_resource type="Animation" id="Animation_o2fud"]
resource_name = "change_selection"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Selector/Yes:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Selector/Yes:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(255, 180), Vector2(252, 177)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Selector/No:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Selector/No:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(355, 177), Vector2(358, 180)]
}

[sub_resource type="Animation" id="Animation_v8wwv"]
resource_name = "init_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Selector/Yes:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Selector/Yes:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(255, 180), Vector2(252, 177)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f7jae"]
_data = {
"RESET": SubResource("Animation_ih3d0"),
"change_selection": SubResource("Animation_o2fud"),
"init_animation": SubResource("Animation_v8wwv")
}

[node name="ChangeStory" type="Node"]
script = ExtResource("1_0hp78")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_w8cca")

[node name="Selector" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Question" type="Label" parent="Selector"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -40.0
offset_right = 189.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Do you want to continue the story in screen?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Yes" type="Label" parent="Selector"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_right = -38.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Yes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="No" type="Label" parent="Selector"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 38.0
offset_right = 61.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "No"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectorAnimatorPlayer" type="AnimationPlayer" parent="."]
deterministic = true
libraries = {
"": SubResource("AnimationLibrary_f7jae")
}

[node name="DialogController" parent="." instance=ExtResource("2_mam1j")]
visible = false

[node name="NextLineButton" type="TextureButton" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
offset_right = -18.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_0hq6g")
ignore_texture_size = true
stretch_mode = 6

[connection signal="animation_completed" from="DialogController" to="." method="_on_dialog_animation_completed"]
[connection signal="pressed" from="NextLineButton" to="." method="_on_next_pressed"]
